--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: masamune_localize
 description: >-
   Library that provides the translation function of Masamune framework.
   Manage translation data with Google SpreadSheet.
-version: 0.2.5+1
+version: 0.2.6
 homepage: https://mathru.net
 repository: https://github.com/mathrunet/flutter_masamune_localize
 
