--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,12 +2,12 @@ name: masamune_localize
 description: >-
   Library that provides the translation function of Masamune framework.
   Manage translation data with Google SpreadSheet.
-version: 0.2.8
+version: 0.5.0+1
 homepage: https://mathru.net
 repository: https://github.com/mathrunet/flutter_masamune_localize
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: ">=2.8.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,7 +22,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   # Masamune
-  masamune_test: ^0.1.0
+  masamune_test: ^0.5.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
